# softwareos-ecosystem

./: .env.example  .mergify.yml  .sops.yaml  ARCHITECTURE.md  CHANGELOG.md  CLOUDFLARE_INTEGRATION_PLAN.md  CODEOWNERS  CONFIGURATION_COMPLETE.md  CONTRIBUTING.md  CRITICAL_ISSUES_RESOLUTION_REPORT.md  FINAL_COMPLETION_REPORT.md  GITHUB_SECRETS_CONFIG.md  MAINTAINERS.yaml  Makefile  PHASE_A_B_COMPLETION_SUMMARY.md  PHASE_C_DOCKER_BUILD_WORKFLOW.md  PHASE_C_STATUS_REPORT.md  PROGRESS_SUMMARY.md  README.md  REPOSITORY_MAPPING.md  SECURITY.md  SUPABASE_MONITORING_SUMMARY.md  TOKENS_MANIFEST.md  deploy.sh  docker-compose.ecosystem.yml  docker-compose.yml  eco-supplychain-hashlock.yml.remote  hashlock.json  package-lock.json  package.json  pyproject.toml  requirements.txt  routing-rules.yaml  sbom.json  todo.md  tsconfig.base.json  validation-report.json  validation_errors.txt  validation_errors_v10.txt  validation_errors_v12.txt  (+9 more)
.circleci/: config.yml
.github/: CODEOWNERS  allowed-actions.yaml  dependabot.yml
architecture/: root-index.json
audit/: quick-verify_20260301.jsonl  rot_indexer_20260301.jsonl
backend/ai/: README.md  pyproject.toml
backend/ai/engines/: __init__.py
backend/ai/engines/folding/: realtime_index.py  vector_folding.py
backend/ai/engines/inference/: resilience.py
backend/ai/src/: __init__.py  app.py  config.py  governance.py  routes.py
backend/ai/src/services/: __init__.py  circuit_breaker.py  connection_pool.py  embedding.py  engine_manager.py  grpc_server.py  health_monitor.py  worker.py
docker/: docker-compose.yml  prometheus.yml
(+293 files in other folders)
