[tool.poetry]
name = "softwareos-base-ai"
version = "1.0.0"
description = "AI generation + YAML governance service for softwareos-base platform"
authors = ["softwareos-base Platform Team <platform-team@softwareos.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/indestructibleorg/softwareos-base"
repository = "https://github.com/indestructibleorg/softwareos-base"
keywords = ["ai", "inference", "llm", "vllm", "governance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "~0.131.0"
uvicorn = { extras = ["standard"], version = "~0.41.0" }
pydantic = "~2.12.5"
prometheus-client = "~0.24.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
